[tool.poetry]
name = "brick-and-mortar"
version = "0.1.0"
description = ""
authors = ["Remi Paulmier <remi.paulmier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
psycopg2 = "^2.9.3"
marshmallow-dataclass = "^8.5.3"
webargs = "^8.1.0"
Flask-JWT-Extended = "^4.3.1"
bcrypt = "^3.2.0"
marshmallow-enum = "^1.5.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

